--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
   "author": "Austin Dudas",
   "license": "ISC",
   "devDependencies": {
+  },
+  "dependencies": {
     "awesome-typescript-loader": "^5.2.1",
+    "express": "^4.17.1",
     "sass": "^1.21.0",
     "source-map-loader": "^0.2.4",
     "typescript": "^3.5.1",
     "webpack": "^4.33.0",
     "webpack-cli": "^3.3.2",
     "webpack-dev-server": "^3.7.0"
-  },
-  "dependencies": {
-    "express": "^4.17.1"
   }
 }
